--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
             padding: 0;
             display: flex;
             justify-content:flex-end; /* Căn chỉnh nội dung sang bên phải */
-            align-items: center; /* Căn giữa theo chiều dọc */
-            height: 100vh; /* Chiều cao toàn bộ màn hình */
+            align-items:space-evenly; /* Căn giữa theo chiều dọc */
+            height: 120vh; /* Chiều cao toàn bộ màn hình */
             background-color: #f0f0f0; /* Màu nền */
         }
 
@@ -24,7 +24,7 @@
         }
 
         h1 {
-            margin-bottom: 20px; 
+            margin-bottom: 15px; 
             color: #333; 
         }
 
