--- a/index.html
+++ b/index.html
@@ -224,18 +224,18 @@
   <img src="woobin.jpg" alt="toggle" class="toggle-icon">
 </div>
  <div class="container">
-        <h1>Menu IOS bá sàn</h1>
+        <h1>Menu IOS bá sàn Thực bel</h1>
         <div class="settings">
             <div class="setting">
                 <label for="aimbot">Ghim đầu:</label>
                 <input type="range" id="aimbot" name="aimbot" min="0" max="100" value="0">
             </div>
             <div class="setting">
-                <label for="red-dot">aimfov:</label>
+                <label for="red-dot">đục giáp:</label>
                 <input type="range" id="red-dot" name="red-dot" min="0" max="100" value="0">
             </div>
             <div class="setting">
-                <label for="2x-scope">aimlock:</label>
+                <label for="2x-scope">xuyên giáp:</label>
                 <input type="range" id="2x-scope" name="2x-scope" min="0" max="100" value="0">
             </div>
             <div class="setting">
