--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
   <img src="woobin.jpg" alt="toggle" class="toggle-icon">
 </div>
  <div class="container">
-        <h1>Menu IOS bá sàn Thực bel</h1>
+        <h1>Menu IOS Thực bel</h1>
         <div class="settings">
             <div class="setting">
                 <label for="aimbot">Ghim đầu:</label>
@@ -239,11 +239,11 @@
                 <input type="range" id="2x-scope" name="2x-scope" min="0" max="100" value="0">
             </div>
             <div class="setting">
-                <label for="4x-scope">lock:</label>
+                <label for="4x-scope">bá sàn:</label>
                 <input type="range" id="4x-scope" name="4x-scope" min="0" max="100" value="0">
             </div>
             <div class="setting">
-                <label for="awm-scope">tốc độ kéo:</label>
+                <label for="awm-scope">headlock:</label>
                 <input type="range" id="awm-scope" name="awm-scope" min="0" max="100" value="0">
             </div>
      <!-- Menu bên trái -->
